Tried adding a transition between pages, it needs research, beside that added new fonts to texts + buttons

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Miztshady/DSQ#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2"
+    "babel-preset-react-app": "^3.1.2",
+    "framer-motion": "^4.1.17"
   }
 }
